--- a/src/main/webapp/app/entities/rfb-event-attendance/rfb-event-attendance.component.html
+++ b/src/main/webapp/app/entities/rfb-event-attendance/rfb-event-attendance.component.html
@@ -19,7 +19,7 @@
             <th jhiSortBy="id"><span>ID</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="attendanceDate"><span>Attendance Date</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="rfbEventId"><span>Rfb Event</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="rfbuserId"><span>Rfbuser</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="rfbUserId"><span>Rfb User</span> <span class="fa fa-sort"></span></th>
             <th></th>
             </tr>
             </thead>
@@ -33,8 +33,8 @@
                     </div>
                 </td>
                 <td>
-                    <div *ngIf="rfbEventAttendance.rfbuserId">
-                        <a [routerLink]="['../rfb-user', rfbEventAttendance.rfbuserId  ]" >{{rfbEventAttendance.rfbuserId}}</a>
+                    <div *ngIf="rfbEventAttendance.rfbUserId">
+                        <a [routerLink]="['../rfb-user', rfbEventAttendance.rfbUserId  ]" >{{rfbEventAttendance.rfbUserId}}</a>
                     </div>
                 </td>
                 <td class="text-right">
